--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body, div, img {
 }
 
 body {
-    background-color: white;
+    background-color: pink;
     border: 2px solid red;
     }
 
@@ -54,11 +54,11 @@ body {
     <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
-<div id='blue'>
+<!-- <div id='blue'>
     <p id='blue1'>111 qq </p>
     <p id='blue2'>hellow aa </p>
     <p id='blue3'>hellow aa </p>
-</div>
+</div> -->
 
 
 <script src="./hammer.min.js"></script>
