--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@ body {
 
 
 <div id='wrapper' >
-    <img id='targetImg' src="Travel_MoneyTips.png" alt="" />
+    <img id='targetImg' src="http://1.bp.blogspot.com/-BLHGHIddNtM/UDzgbT78VzI/AAAAAAAACzY/gD8JfQSEr5M/s1600/dog-icon.png" alt="" />
+    <!-- <img id='targetImg' src="Travel_MoneyTips.png" alt="" /> -->
     <!-- <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" /> -->
 </div>
 
-<!-- <div id='blue'>
+<div id='blue'>
     <p id='blue1'>111 qq </p>
     <p id='blue2'>hellow aa </p>
     <p id='blue3'>hellow aa </p>
-</div> -->
+</div>
 
 
 <script src="./hammer.min.js"></script>
@@ -108,6 +109,13 @@ jQuery('#green').hide();
 //     jQuery('#green1').html('1vH ' + frameHeight + ' vw: ' + frameWidth);
 //     jQuery('#green2').html(imgHeight);
 // });
+
+var uagent = navigator.userAgent.toLowerCase();
+console.log(uagent);
+jQuery('#blue1').html(uagent);
+
+
+hammertime.on('tap', function(e) { console.log(e); })
 
 function showFull(e) {
     // Set everything to default
