--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {
 
 
 <div id='wrapper' >
-    <img id='targetImg' src="http://a4.mzstatic.com/us/r30/Purple3/v4/8b/27/0b/8b270b51-e479-dfe9-f337-37b02a831edc/icon256.png" alt="" />
-    <!-- <img id='targetImg' src="Travel_MoneyTips.png" alt="" /> -->
+    <!-- <img id='targetImg' src="http://a4.mzstatic.com/us/r30/Purple3/v4/8b/27/0b/8b270b51-e479-dfe9-f337-37b02a831edc/icon256.png" alt="" /> -->
+    <img id='targetImg' src="Travel_MoneyTips.png" alt="" />
     <!-- <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" /> -->
 </div>
 
@@ -112,7 +112,7 @@ jQuery('#green').hide();
 
 var uagent = navigator.userAgent.toLowerCase();
 console.log(uagent);
-jQuery('#blue1').html(uagent);
+// jQuery('#blue1').html(uagent);
 
 
 hammertime.on('tap', function(e) { console.log(e); })
