--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ body, div, img {
 }
 
 body {
-    background-color: yellow;
+    background-color: pink;
     border: 2px solid red;
+    -webkit-overflow-scrolling: touch;
     }
 
 #wrapper {
