--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ function zoom(direction) {
 
     console.log(viewportWidth);
     console.log(wrapperWidth);
+    console.log('window.frameElement.offsetWidth : ' + window.frameElement.offsetWidth );
 }
 
 
