--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, div, img {
 }
 
 body {
-    background-color: pink;
+    background-color: yellow;
     border: 0px solid red;
     -webkit-overflow-scrolling: touch;
     }
@@ -40,9 +40,9 @@ body {
     text-align: center;
 }
 button {
-    width: 40%;
+    width: 40vw;
+    height: 30vh;
     background-color: rgba(255, 0, 0, 0.33);
-    height: 300px;
 }
 </style>
 </head>
