--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var imgWidth = parseInt(getComputedStyle(wrapper).width),
     frameWidth = window.frameElement.offsetWidth || Math.max(document.documentElement.clientWidth, window.innerWidth || 0), 
     frameHeight = window.frameElement.offsetHeight|| Math.max(document.documentElement.clientWidth, window.innerHeight || 0);
 */
-console.log(parseInt(getComputedStyle(wrapper).width));
+console.log('wrapperW: ' + parseInt(getComputedStyle(wrapper).width) + ", wrapH: " + parseInt(getComputedStyle(wrapper).height);
 
 function zoom(direction) {
     var wrapperWidth = parseInt(getComputedStyle(wrapper).width);
