--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, div, img {
 }
 
 body {
-    background-color: pink;
+    background-color: purple;
     border: 0px solid red;
     -webkit-overflow-scrolling: touch;
     }
@@ -90,7 +90,11 @@ button {
 var wrapper = document.getElementById('wrapper'), 
     targetImg = document.getElementById('targetImg'),
     thisBody = document.body,
+    imgNatW = targetImg.naturalWidth,
     rate = 0.33; // This slows down the response to pinch and pan
+
+var minZoom = parseInt(getComputedStyle(wrapper).width), //This will be the initial Width  on load
+    maxZoom = minZoom * 2.5;
 
 var viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
 var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
@@ -99,20 +103,22 @@ var wrapperWidth = parseInt(getComputedStyle(wrapper).width);
 
 
 
-// These variables need to be local since orientation can change.
-var imgWidth = parseInt(getComputedStyle(wrapper).width),
-    imgHeight = parseInt(getComputedStyle(wrapper).height);
+
 /*    // frameWidth & frameHeight: Use parent iframe's size by default.  Use viewport's size as fallback.
     frameWidth = window.frameElement.offsetWidth || Math.max(document.documentElement.clientWidth, window.innerWidth || 0), 
     frameHeight = window.frameElement.offsetHeight|| Math.max(document.documentElement.clientWidth, window.innerHeight || 0);
 */
 console.log('viewW: ' + viewportWidth + ", viewH: " + viewportHeight );
+    console.log('minZoom: ' + minZoom + ', vW: ' + viewportWidth);
+
 
 function zoom(direction) {
-    var minZoom = viewportWidth,
-        maxZoom = viewportWidth * 3,
-        scale = 0.25 * direction,
-        newWidth = wrapperWidth + (viewportWidth * scale);
+// These variables need to be local since orientation can change.
+    var imgCurrentWidth = parseInt(getComputedStyle(wrapper).width),
+        imgCurrentHeight = parseInt(getComputedStyle(wrapper).height);
+
+    var scale = 0.10 * direction,
+        newWidth = imgCurrentWidth + (minZoom * scale);
 
     if(newWidth > maxZoom){
         newWidth = maxZoom;
@@ -123,9 +129,10 @@ function zoom(direction) {
 
     wrapper.style.width = newWidth + 'px'; 
 
-    console.log(viewportWidth);
+    console.log('nw: ' + newWidth + ' maxZoom: ' + maxZoom  );
     console.log(wrapperWidth);
-    console.log('window.frameElement.offsetWidth : ' + window.frameElement.offsetWidth );
+    console.log(imgNatW);
+    // console.log('window.frameElement.offsetWidth : ' + window.frameElement.offsetWidth );
 }
 
 
