--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@ p { font-size: 60px;}
 
 
 
-body, div, img {
+html, body, div, img {
     padding: 0;
     margin: 0;
     border: 0;
 }
 
-body {
-    background-color: purple;
+html, body {
+    background-color: pink;
     border: 0px solid red;
-    -webkit-overflow-scrolling: touch;
+
+    height:100%; 
+    overflow:hidden;
+    overflow:auto; 
+    -webkit-overflow-scrolling:touch}
     }
 
 #wrapper {
-    border: 0px solid yellow;
+    border: 0px solid green;
     position: relative;
 /*    height: 100vh;
     width: 100vw;*/
