--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ html, body, div, img {
 }
 
 html, body {
-    background-color: pink;
+    background-color: purple;
     border: 0px solid red;
 
     height:100%; 
     overflow:hidden;
     overflow:auto; 
-    -webkit-overflow-scrolling:touch}
+    -webkit-overflow-scrolling:touch;
     }
 
 #wrapper {
