--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ html, body, div, img {
 }
 
 html, body {
-    background-color: purple;
+    background-color: pink;
     border: 0px solid red;
 
     height:100%; 
@@ -41,7 +41,7 @@ html, body {
 }
 
 #buttonHolder {
-    text-align: center;
+    text-align: left;
 }
 button {
     width: 100px;
